# anagram-solver-rust

./: Cargo.toml  testlist
.github/workflows/: rust.yml
src/: main.rs
src/combination_finder/: mod.rs
src/combination_generator/: mod.rs
src/dictionary/: mod.rs
src/permutations_finder/: mod.rs
