[package]
name = "anagram-solver-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.3"
log = "0.4.17"
env_logger = "0.7.1"
md5 = "0.7.0"
threadpool = "1.8.1"

[dev-dependencies]
test-case = "1.2.1"